# fps-settings-plugin

./: .gitignore  Cargo.toml  README.md  deploy.sh
FpsSettings/: config.yaml  libfps_settings_plugin.nro
src/: fps_config.rs  fps_hooks.rs  lib.rs  mov_config.rs  utils.rs
