[package]
name = "fps-settings-plugin"
version = "0.1.0"
authors = []
edition = "2021"

[package.metadata.skyline]
titleid = "0100a6301214e000" # Fire Emblem Engage

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = "0.2.0" # Contains the macros needed to install hooks.
engage = { git = "https://github.com/DivineDragonFanClub/engage" } # Contains a set of functions and utilities to call the game's code.
unity = { git = "https://github.com/DivineDragonFanClub/unity" } # Utilities to talk with Unity internals. You usually wouldn't need it unless what you want isn't in the engage crate.
cobapi = { version = "0.3.0", git = "https://github.com/DivineDragonFanClub/cobapi" } # Utilities to talk with Cobalt. When new methods are added, you might need to increase the version to use opt-in to them.
phf = { version = "0.11.2", features = ["macros"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
